start-sanitize-sky
Fri Sep 18 16:23:32 1998  Doug Evans  <devans@canuck.cygnus.com>

	* dvp-opc.c (gif_opcodes): Support EOP on gifimage.

end-sanitize-sky
Tue Sep 15 15:14:45 1998  Doug Evans  <devans@canuck.cygnus.com>

	* m32r-opc.h,m32r-opc.c: Add bbpc,bbpsw support.

start-sanitize-nortel-ppc750
1998-09-09  Michael Meissner  <meissner@cygnus.com>

	* ppc-opc.c (powerpc_opcodes): Add support for PowerPC 750 move
	to/from SPRs.

end-sanitize-nortel-ppc750
Fri Sep  4 19:42:59 1998  Nick Clifton  <nickc@cygnus.com>

	* arm-dis.c (print_insn_big_arm): Detect Thumb symbols in elf
	object files.
	(print_insn_little_arm): Detect Thumb symbols in elf object
	files. 

Sat Aug 29 22:24:09 1998  Richard Henderson  <rth@cygnus.com>

	* alpha-dis.c (print_insn_alpha): Use the machine type to
	decide which PALcode set to include.

Sun Aug 23 02:16:18 1998  Richard Henderson  <rth@cygnus.com>

	* sparc-opc.c (FBRX): Fix typo in ",a,pn %fcc3" case.

Fri Aug 21 16:07:52 1998  Nick Clifton  <nickc@cygnus.com>

	* d30v-opc.c (d30v_opcode_table): Add FLAG_MUL32 to MAC, MACS,
	MSUB and MSUBS instructions.

start-sanitize-r5900
Tue Aug 18 16:48:52 1998  Ian Lance Taylor  <ian@cygnus.com>

	* mips-opc.c: Insert contents of vu0.h, rather than including it.
	* vu0.h: Remove.
	* Makefile.am: Rebuild dependencies.
	* Makefile: Rebuild.

end-sanitize-r5900
Thu Aug 13 16:23:04 1998  Ian Lance Taylor  <ian@cygnus.com>

	* ppc-opc.c (powerpc_operands): Omit parens around additions in
	operand name macros.

Wed Aug 12 14:00:38 1998  Ian Lance Taylor  <ian@cygnus.com>

start-sanitize-coldfire
	* m68k-opc.c: Correct divsl, divul, remsl, and remul for
	ColdFire, as below for mulsl and mulul.

end-sanitize-coldfire
	From Peter Jeremy <peter.jeremy@auss2.alcatel.com.au>:
	* m68k-opc.c: Correct mulsl and mulul to use q rather than D, a,
	+, -, and d for ColdFire.

	From Peter Thiemann <thiemann@informatik.uni-tuebingen.de>:
	* ppc-opc.c (insert_mbe): Handle wrapping bitmasks.